--- a/html/reservation/reservationSelectDate.html
+++ b/html/reservation/reservationSelectDate.html
@@ -91,7 +91,7 @@
                 <h1>선택하신 목록</h1>
             </div>
             <div class="select-container">
-                <div class="company">
+                <div class="select-company">
                     <div>
                         <img id="company-images" src="../../assets/images/reserve-studio-company.png" alt="업체 이미지">
                     </div>
