--- a/html/visitReservation/visitReserveDate.html
+++ b/html/visitReservation/visitReserveDate.html
@@ -71,23 +71,23 @@
                     <section class="reserve-time">
                         <h2>방문 시간 선택</h2>
                         <div class="reserve-timeAM">
-                            <div class="ampm">오전</div>
-                            <button>09:00</button>
-                            <button>10:00</button>
-                            <button>11:00</button>
+                            <div class="time-title">오전</div>
+                            <button class="time-btn-none">09:00</button>
+                            <button class="time-btn-none">10:00</button>
+                            <button class="time-btn">11:00</button>
                         </div>
                         <div class="reserve-timePM">
-                            <div class="ampm">오후</div>
-                            <button>12:00</button>
-                            <button>13:00</button>
-                            <button>14:00</button>
-                            <button>15:00</button>
-                            <button>16:00</button>
-                            <button>17:00</button>
-                            <button>18:00</button>
-                            <button>19:00</button>
-                            <button>20:00</button>
-                            <button>21:00</button>
+                            <div class="time-title">오후</div>
+                            <button class="time-btn">12:00</button>
+                            <button class="time-btn">13:00</button>
+                            <button class="time-btn-none">14:00</button>
+                            <button class="time-btn">15:00</button>
+                            <button class="time-btn">16:00</button>
+                            <button class="time-btn">17:00</button>
+                            <button class="time-btn">18:00</button>
+                            <button class="time-btn">19:00</button>
+                            <button class="time-btn">20:00</button>
+                            <button class="time-btn">21:00</button>
                         </div>
                     </section>
 
@@ -102,5 +102,6 @@
             
         </div>
         <div id="footer-placeholder"></div>
+        <script src="../../js/visitReservation/visitReserveDate.js"></script>
     </body>
 </html>
