--- a/html/visitReservation/visitReserveInfo.html
+++ b/html/visitReservation/visitReserveInfo.html
@@ -101,7 +101,7 @@
                             <!-- <p>신청해주신 내용으로 업체 방문 상담이 예약되며,
                             <br>예약 확정은 24시간 이내 메일로 보내드립니다.</p> -->
                             <div class="modal-btn-suc">
-                                <a href="#"><button class="check-btn-suc">확인</button></a> 
+                                <a href="../../html/weddingHall/weddingHallDetail.html"><button class="check-btn-suc">확인</button></a> 
                             </div>
                         </div>
                     </section>
