--- a/html/reservation/reservationCategory.html
+++ b/html/reservation/reservationCategory.html
@@ -38,28 +38,20 @@
         <!-- 카테고리 리스트 -->
         <section class="category-all">
             <div class="category">
-                <a href="#">
                     <img src="../../assets/images/reservation-studio.png" alt="Studio">
                     <h3 class="category-text">Studio</h3>  
-                </a>
             </div>
             <div class="category">
-                <a href="#">
                     <img src="../../assets/images/resevation-dress.png" alt="Dress">
                     <h3 class="category-text">Dress</h3>   
-                </a>
             </div>
             <div class="category">
-                <a href="#">
                     <img src="../../assets/images/reservation-makeup.jpg" alt="Hair&Makeup">
                     <h3 class="category-text2">Hair & <br>Makeup</h3>
-                </a>   
             </div>
             <div class="category">
-                <a href="#">
                     <img src="../../assets/images/reservation-package.png" alt="Package">
                     <h3 class="category-text">Package</h3>
-                </a>
             </div>
         </section>
 
@@ -69,5 +61,6 @@
         </section>   
     </div>
     <div id="footer-placeholder"></div>
+    <script src="../../js/reservation/reservationCategory.js"></script>
 </body>
 </html>
