feat: [FE] front 시연을 위한 href 변경

--- a/html/main/main.html
+++ b/html/main/main.html
@@ -61,7 +61,9 @@
                 </div>
             </div>
             <div class="main-btn">
-                <a href="../estimate/estimateCal.html" class="main-button"
+                <a
+                    href="../../html/weddingHall/weddingHallList.html"
+                    class="main-button"
                     >웨딩홀 구경하러 가기
                 </a>
             </div>
