--- a/html/weddingHall/mapViewWithFilters.html
+++ b/html/weddingHall/mapViewWithFilters.html
@@ -92,26 +92,27 @@
                 <h2>인기 키워드로 보는 웨딩홀</h2>
                 <div class="keyword-container">
                     <ul>
-                        <li>
-                            <a href="#" data-keyword="popular">🔥 인기많은</a>
+                        <li class="popular">
+                            <a href="#">🔥 인기많은</a>
                         </li>
-                        <li>
-                            <a href="#" data-keyword="delicious"
+                        <li class="delicious">
+                            <a href="#">
                                 >🍽️ 식사가 맛있는</a
                             >
                         </li>
-                        <li>
-                            <a href="#" data-keyword="outdoor"
+                        <li class="outdoor">
+                            <a href="#""
                                 >🌳 야외에서 즐기는</a
                             >
                         </li>
-                        <li>
-                            <a href="#" data-keyword="reviewed">💎 후기많은</a>
+                        <li class="reviewed">
+                            <a href="#">💎 후기많은</a>
                         </li>
-                        <li>
-                            <a href="#" data-keyword="new">🚩 따끈따근한</a>
+                        <li class="new">
+                            <a href="#" >🚩 따끈따근한</a>
                         </li>
-                        <li><a href="#" data-keyword="value">💸 가성비</a></li>
+                        <li class="value">
+                            <a href="#">💸 가성비</a></li>
                     </ul>
                 </div>
             </section>
