--- a/html/weddingHall/reviewSearchModal.html
+++ b/html/weddingHall/reviewSearchModal.html
@@ -22,6 +22,7 @@
                             <div class="date">3일전</div>
                             <div class="title">
                                 <a
+                                    target="_blank"
                                     href="https://blog.naver.com/loopy_0/222917425520"
                                 >
                                     안산 호텔/안산 웨딩홀/안산
