--- a/html/weddingHall/weddingHallDetail.html
+++ b/html/weddingHall/weddingHallDetail.html
@@ -162,7 +162,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="../../html/visitReservation/visitReserveDate.html">
+                        <a href="../../html/login/login.html">
                             <button class="schedule-button">
                                 방문 상담 신청 하러가기
                             </button>
