fix : [FE] 전반적인 디자인 수정

--- a/html/Package/packageMain.html
+++ b/html/Package/packageMain.html
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="midpar">스드메 패키지, 이런 분들께 <span class="color">추천</span>드려요!</div>
+            <div class="midpar">스드메 패키지,<br/> 이런 분들께 <span class="color">추천</span>드려요!</div>
             <div class="recommendations">
                 <div class="recommendation">
                     <img src="../../assets/images/RecommendPic1.png">
