--- a/html/estimate/estimateDetails.html
+++ b/html/estimate/estimateDetails.html
@@ -6,6 +6,7 @@
         <title>Reservation Summary</title>
         <link rel="stylesheet" href="../../css/common/reset.css">
         <link rel="stylesheet" href="../../css/estimate/estimateDetails.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <script src="../../js/main/main.js"></script>
     </head>
     <body>
@@ -28,7 +29,7 @@
                         <div class="selected">
                             <div class="content-main">
                                 <p class="content-bold">S 스튜디오</p>
-                                <p>서울특별시 서초구 신반포로 4길 7</p>
+                                <p class="content-address">서울특별시 서초구 신반포로 4길 7</p>
                             </div>
                             <div class="basic-option">
                                 <div class="basicOptionParagraph">
@@ -36,8 +37,8 @@
                                     <p>원본 데이터</p>
                                     <p>원본 파일(3장) + 기본 인화 1컷(20R)</p>  
                                 </div>
-                                <div>
-                                    <p class="main-Price">330,000원</p>
+                                <div class="main-price">
+                                    <p>330,000원</p>
                                 </div>
                             </div>
                         </div>        
@@ -143,7 +144,11 @@
                         <div class="total3">
                             <span>최종 금액</span><span>330,000원</span>
                         </div>
-                        <a href="#" class="button">다음으로</a>
+                        <div class="replay">
+                            <a href=""><span class="material-symbols-outlined">
+                                replay
+                                </span>업체 다시 선택</a>
+                        </div>
                     </div>
                 </div>   
                 <div class="note">
