feat:[FE]로그인기능js 제작중

--- a/html/login/login.html
+++ b/html/login/login.html
@@ -12,9 +12,9 @@
 <body>
     <div id="header-placeholder"></div>
     <div class = "login-wrapper">
-        <!--로그이미지-->
+        <!--Wedder글자-->
         <div class = "logo">
-            <label  class="Wedder"><b>Wedder</b></label>
+            <label  class="Wedder" onclick="main();"><b>Wedder</b></label>
         </div>
 
         
@@ -35,7 +35,7 @@
                 </label>
                 <!-- 비밀번호 찾기 -->
                 <div id="forgotin" style="display:inline;">
-                <button id = "forgot" onclick="showPopup();" > Forgot Password</button>
+                <button id = "forgot" onclick="showPopup();">Forgot Password</button>
                 </div>
                 <div class="passwordSet">
                     <input type="password" id="Password" maxlength="20" min="8">
@@ -66,15 +66,15 @@
             <br />
             <div class ="ChangeButton">
                 <button class ="chg">
-                        <img src ="#" width="11px" height="11px" class="Clogo">
+                        <img src ="https://noticon-static.tammolo.com/dgggcrkxq/image/upload/v1566791548/noticon/zxi0bnl5h66bszdpjaet.jpg" width="11px" height="11px" class="Clogo">
                         &nbsp; Google
                 </button>
-                <button class ="chg" href="#">
-                        <img src ="#"  width="10px" height="10px" class="Clogo">
+                <button class ="chg">
+                        <img src ="https://noticon-static.tammolo.com/dgggcrkxq/image/upload/v1566791426/noticon/iqusgjw4nm8pqgkbjj5f.png"  width="10px" height="10px" class="Clogo">
                         &nbsp; Apple
                 </button>
                 <button class ="chg">
-                        <img src ="#"  width="10px" height="10px" class="Clogo">
+                        <img src ="https://noticon-static.tammolo.com/dgggcrkxq/image/upload/v1567008602/noticon/ird3id54hstap8dtokdx.png"  width="10px" height="10px" class="Clogo">
                         &nbsp; Facebook
                 </button>
                 <br /> 
