chore : [FE] 충돌 해결

--- a/html/Package/packageMain.html
+++ b/html/Package/packageMain.html
@@ -76,7 +76,7 @@
                             <span class="circle">2</span>
                             <h2>맞춤형 서비스</h2>
                         </div>
-                        <p>당신만을 위한 맞춤형 웨딩!<br>원하시는 분위기에 맞는 업체들을 한 곳에 모아뒀어요.</p>
+                        <p>당신만을 위한 맞춤형 웨딩!<br>원하시는 분위기에 맞는 업체들을<br>한 곳에 모아뒀어요.</p>
                     </div>
                 </div>
                 <div class="recommendation">
