chore : [FE] 폴더명, 파일명, 클래스명 정리

--- a/html/mypage/couple-page.html
+++ b/html/mypage/couple-page.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>couplePage</title>
+    <title>couple-page</title>
     <section class="link">
-      <link rel="stylesheet" href="../../css/myPage/couplePage.css" />
+      <link rel="stylesheet" href="../../css/myPage/couple-page.css" />
       <link
         rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
       />
       <link
         rel="stylesheet"
-        href="../../css/common/sidebar/sidebarMyPage.css"
+        href="../../css/common/sidebar/sidebar-myPage.css"
       />
       <link rel="stylesheet" href="../../css/myPage/mypage-naviba.css" />
     </section>
     <section class="script">
       <script defer src="../../js/main/main.js"></script>
-      <script defer src="../../js/myPage/couplePage.js"></script>
-      <script defer src="../../js/myPage/myPageMain.js"></script>
+      <script defer src="../../js/myPage/couple-page.js"></script>
+      <script defer src="../../js/myPage/myPage-main.js"></script>
       <script defer src="../../js/myPage/navibar.js"></script>
     </section>
   </head>
