--- a/html/mypage/like-list.html
+++ b/html/mypage/like-list.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LikeList</title>
+    <title>likelist</title>
     <!-- 링크 -->
     <section class="link">
-      <link rel="stylesheet" href="../../css/myPage/LikeList.css" />
+      <link rel="stylesheet" href="../../css/myPage/likelist.css" />
       <link rel="stylesheet" href="../../css/common/reset.css" />
       <link
         rel="stylesheet"
-        href="../../css/common/sidebar/sidebarMyPage.css"
+        href="../../css/common/sidebar/sidebar-myPage.css"
       />
     </section>
     <!-- 스크립트 -->
     <section class="script">
-      <script defer src="../../js/myPage/LikeList.js"></script>
+      <script defer src="../../js/myPage/likelist.js"></script>
       <script defer src="../../js/main/main.js"></script>
-      <script defer src="../../js/myPage/myPageMain.js"></script>
+      <script defer src="../../js/myPage/myPage-main.js"></script>
     </section>
   </head>
   <div id="header-placeholder"></div>
