--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -18,14 +18,14 @@
       />
       <link
             rel="stylesheet"
-            href="../../css/common/sidebar/sidebarMyPage.css"
+            href="../../css/common/sidebar/sidebar-myPage.css"
         />
     </section>
     <!-- 스크립트 -->
     <section class="script">
       <script defer src="../../js/main/main.js"></script>
       <script defer src="../../js/mypage/mypage.js"></script>
-      <script defer src="../../js/myPage/myPageMain.js"></script>
+      <script defer src="../../js/myPage/myPage-main.js"></script>
     </section>
   </head>
     <header id="header-placeholder"></header>
@@ -117,7 +117,7 @@
             <div class="sub-title-header">
               <div class="sub-title">금일 방문 일정</div>
 
-              <div class="ReservationMange-go">
+              <div class="Reservation-mange-go">
                 <a href="#">방문 일정 상세보기>>></a>
               </div>
             </div>
