feat : [FE] payment-detail.html

--- a/html/mypage/payment-detail.html
+++ b/html/mypage/payment-detail.html
@@ -31,14 +31,14 @@
           </aside>
         </section>
       </div>
-      
-        <div class="hd__inner900">
+
+      <div class="hd__inner900">
             <!-- 1. body header-->
-            <section class="body-header" id="paymentVD-section1">
+            <section class="body-header" id="payment-detail-section1">
             <h3>Reservation Details</h3>
             </section>
             <!-- 2. brand-filter -->
-            <section class="tabs" id="paymentVD-section2">
+            <section class="tabs" id="payment-detail-section2">
                 <div class="brand-filter">
                     <h3>[스튜디오] 스튜디오</h3>
                     <h3>[드레스] 드레스</h3>
@@ -46,19 +46,83 @@
                 </div>
             </section>
             <!-- 3.calandar -->
-            <section class="calandars" id="paymentVD-section3">
-                <div>
+            <section class="calandars" id="payment-detail-section3">
+                <div class="calandars-payment-list">
                     <img
                         src="../../assets/images/calendar-july.png"
                         alt="달력"
                         class="calandar"
                     />
                     <div class="calandar-Content">
-                    
+                      <div class="calandar-top">상세 결제 내역</div>
+                      <div class="calandar-middle">
+                        <div class="calendar-option-list">
+                          <img src="" alt="이미지" class="calandar-option">
+                          <div class="calandar-option">야간 촬영</div>
+                          <div class="calandar-option"> 가격 :220,000원</div>
+                        </div>
+                        <div class="calendar-option-list">
+                          <img src="" alt="이미지" class="calandar-option">
+                          <div class="calandar-option">들러리 촬영</div>
+                          <div class="calandar-option"> 가격 :110,000원</div>
+                        </div>
+                        <div class="calendar-option-list">
+                          <img src="" alt="이미지" class="calandar-option">
+                          <div class="calandar-option">애견동반 촬영
+                          </div>
+                          <div class="calandar-option"> 가격 :100,000원</div>
+                        </div>
+                        <div class="calendar-total-price"></div>
+                      </div>
+                      <div class="calendar-bottom">
+                        <div class="calendar-total-price">
+                          <div>정상가 </div>
+                          <div>430,000원</div>
+                        </div>
+                        <div class="calendar-total-price">
+                          <div>쿠폰/포인트 할인가</div>
+                          <div>-86,000원</div>
+                        </div>
+                        <div class="calendar-total-price">
+                          <div>최종금액  </div>
+                          <span>344,000원</span>
+                        </div>
+                      </div>
                     </div>
                 <div>
             </section>
-        </div>
+            <!-- 옵션 상세내용 -->
+            <section class="option-detail" id="payment-detail-section4">
+              <div>
+                <ul class="option-tabs">
+                  <li class="option-tab">옵션 상세</li>
+                  <li class="option-tab">옵션 평 <span>(285)</span></li>
+                  <li class="option-tab">옵션 문의</li>
+                  <li class="option-tab">교환 및 환불 안내</li>
+                </ul>
+              </div>
+                <div class="option-information">옵션 정보</div>
+                <div>
+                  <table>
+                    <tbody>
+                      <tr>
+                        <th>옵션명</th>
+                        <td>야간촬영</td>
+                        <th>금액</th>
+                        <td>220,000원</td>
+                      </tr>
+                      <tr>
+                        <th>장소</th>
+                        <td> 서울숲 </td>
+                        <th>추가 옵션</th>
+                        <td>의상대여, 앨범수록, 액자수록, 흑백사진...</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+            </section>
+      </div>
     </div>
   </body>
+  <div id="footer-placeholder"></div>  
 </html>
