chore : [FE] reset folder camelcase

--- a/html/mypage/estimateStorage.html
+++ b/html/mypage/estimateStorage.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>estimateStorage</title>
     <link rel="stylesheet" href="../../css/common/reset.css" />
-    <link rel="stylesheet" href="../../css/mypage/estimate-storage.css" />
-    <link rel="stylesheet" href="../../css/common/sidebar/sidebar-myPage.css" />
+    <link rel="stylesheet" href="../../css/mypage/estimateStorage.css" />
+    <link rel="stylesheet" href="../../css/common/sidebar/sidebarMyPage.css" />
     <script defer src="../../js/main/main.js"></script>
-    <script defer src="../../js/myPage/myPage-main.js"></script>
+    <script defer src="../../js/myPage/myPageMain.js"></script>
   </head>
   <body>
     <div id="header-placeholder"></div>
