--- a/html/mypage/likeList.html
+++ b/html/mypage/likeList.html
@@ -10,14 +10,14 @@
       <link rel="stylesheet" href="../../css/common/reset.css" />
       <link
         rel="stylesheet"
-        href="../../css/common/sidebar/sidebar-myPage.css"
+        href="../../css/common/sidebar/sidebarMyPage.css"
       />
     </section>
     <!-- 스크립트 -->
     <section class="script">
-      <script defer src="../../js/myPage/likelist.js"></script>
+      <script defer src="../../js/myPage/likeList.js"></script>
       <script defer src="../../js/main/main.js"></script>
-      <script defer src="../../js/myPage/myPage-main.js"></script>
+      <script defer src="../../js/myPage/myPageMain.js"></script>
     </section>
   </head>
   <div id="header-placeholder"></div>
