--- a/html/mypage/myPayment.html
+++ b/html/mypage/myPayment.html
@@ -8,14 +8,14 @@
       <link rel="stylesheet" href="../../css/myPage/myPayment.css" />
       <link
         rel="stylesheet"
-        href="../../css/common/sidebar/sidebar-myPage.css"
+        href="../../css/common/sidebar/sidebarMyPage.css"
       />
-      <link rel="stylesheet" href="../../css/myPage/mypage-naviba.css" />
+      <link rel="stylesheet" href="../../css/myPage/mypageNaviba.css" />
     </section>
     <section class="script">
       <script defer src="../../js/myPage/myPayment.js"></script>
       <script defer src="../../js/main/main.js"></script>
-      <script defer src="../../js/myPage/myPage-main.js"></script>
+      <script defer src="../../js/myPage/myPageMain.js"></script>
       <script defer src="../../js/myPage/navibar.js"></script>
     </section>
   </head>
