--- a/html/mypage/paymentDetail.html
+++ b/html/mypage/paymentDetail.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <section class="link">
-      <link rel="stylesheet" href="../../css/myPage/payment-detail.css" />
+      <link rel="stylesheet" href="../../css/myPage/paymentDetail.css" />
       <link rel="stylesheet" href="../../css/common/reset.css" />
       <link
         rel="stylesheet"
-        href="../../css/common/sidebar/sidebar-mypage.css"
+        href="../../css/common/sidebar/sidebarMypage.css"
       />
     </section>
     <section class="script">
       <script defer src="../../js/myPage/"></script>
       <script defer src="../../js/main/main.js"></script>
-      <script defer src="../../js/myPage/myPage-main.js"></script>
+      <script defer src="../../js/myPage/myPageMain.js"></script>
     </section>
 
     <title>Document</title>
