--- a/html/mypage/wishList.html
+++ b/html/mypage/wishList.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wish List</title>
     <section class="link">
-      <link rel="stylesheet" href="../../css/myPage/wish_list.css" />
+      <link rel="stylesheet" href="../../css/myPage/wishList.css" />
       <link
         rel="stylesheet"
-        href="../../css/common/sidebar/sidebar-myPage.css"
+        href="../../css/common/sidebar/sidebarMyPage.css"
       />
     </section>
     <section class="script">
       <script defer src="../../js/main/main.js"></script>
-      <script defer src="../../js/myPage/wish_list.js"></script>
-      <script defer src="../../js/mypage/myPage-main.js"></script>
+      <script defer src="../../js/myPage/wishList.js"></script>
+      <script defer src="../../js/mypage/myPageMain.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.3.1/swiper-bundle.min.js"></script>
     </section>
   </head>
