--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -18,14 +18,14 @@
       />
       <link
             rel="stylesheet"
-            href="../../css/common/sidebar/sidebar-myPage.css"
+            href="../../css/common/sidebar/sidebarMyPage.css"
         />
     </section>
     <!-- 스크립트 -->
     <section class="script">
       <script defer src="../../js/main/main.js"></script>
       <script defer src="../../js/mypage/mypage.js"></script>
-      <script defer src="../../js/myPage/myPage-main.js"></script>
+      <script defer src="../../js/myPage/myPageMain.js"></script>
     </section>
   </head>
     <header id="header-placeholder"></header>
