eat : [FE]패스워드 눈동자 기능

--- a/html/login/IDJoin.html
+++ b/html/login/IDJoin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../css/login/IDJoin.css"/>
+    <link rel="stylesheet" href="../../css/login/idjoin.css"/>
 </head>
 <body>
     <div class = "join">
@@ -30,8 +30,8 @@
             </div>
                 <br />
             <form action = "../../html/login/passwordJoin.html" method="get">
-                <div class = "idset">
-                <input type = "email" id ="idjoin" placeholder='아이디 (이메일) 입력' required pattern="[a-zA-Z0-9]+[@][a-zA-Z0-9]+[.]+[a-zA-Z]+[.]*[a-zA-Z]*" />
+                <div class = "id-set">
+                <input type = "email" id ="id-join" placeholder='아이디 (이메일) 입력' required pattern="[a-zA-Z0-9]+[@][a-zA-Z0-9]+[.]+[a-zA-Z]+[.]*[a-zA-Z]*" />
                 <br />
             </div>
             <br><br/>
@@ -42,6 +42,6 @@
             </div>
             </form>
     </div>
-    <script defer src="../../js/login/IDJoin.js"></script>
+    <script defer src="../../js/login/idjoin.js"></script>
 </body>
 </html>
