--- a/html/login/agreement.html
+++ b/html/login/agreement.html
@@ -8,7 +8,7 @@
     <script src="../../js/login/agreement.js"></script>
 </head>
 <body>
-    <div class="agreement"> 
+    <div class="agree-ment"> 
         <div>
             <h1 id ="h">간편가입</h1>
             <div>
@@ -29,22 +29,21 @@
             <br />
         </div>
         <br />
-        <div class ="checkin">
-            <input type ="checkbox" id="checkset" /> <label for="checkset">모두 동의(선택 정보 포함)</label>
+        <div class ="check-in">
+            <input type ="checkbox" id="check-set" /> <label for="check-set">모두 동의(선택 정보 포함)</label>
             <br />
         </div>
         <br />
         <div>
-            
             <br />
         </div>
         <br />
         <div class="check">
-            <input type ="checkbox" id="checkin1" /> <label for="checkin1">[필수] 만 14세 이상입니다.</label> <br /><br />
-            <input type ="checkbox" id="checkin2" /> <label for="checkin2">[필수] 이용약관 동의 &nbsp;</label><a onclick="usePopup();">보기</a> <br /><br />
-            <input type ="checkbox" id="checkin3" /> <label for="checkin3">[필수] 개인정보 수집 및 이용 동의&nbsp;</label> <a onclick="privacyPopup();">보기</a><br /><br />
-            <input type ="checkbox" id="checkin4"/> <label for="checkin4">[선택] 마케팅 목적의 개인정보 수집 및 이용 동의&nbsp;</label> <a onclick="usePopup();">보기</a><br /><br />
-            <input type ="checkbox" id="checkin5"/> <label for="checkin5">[선택] 광고성 정보 수신 동의 <br /><br />
+            <input type ="checkbox" id="check-in1" /> <label for="check-in1">[필수] 만 14세 이상입니다.</label> <br /><br />
+            <input type ="checkbox" id="check-in2" /> <label for="check-in2">[필수] 이용약관 동의 &nbsp;</label><a onclick="usePopup();">보기</a> <br /><br />
+            <input type ="checkbox" id="check-in3" /> <label for="check-in3">[필수] 개인정보 수집 및 이용 동의&nbsp;</label> <a onclick="privacyPopup();">보기</a><br /><br />
+            <input type ="checkbox" id="check-in4"/> <label for="check-in4">[선택] 마케팅 목적의 개인정보 수집 및 이용 동의&nbsp;</label> <a onclick="usePopup();">보기</a><br /><br />
+            <input type ="checkbox" id="check-in5"/> <label for="check-in5">[선택] 광고성 정보 수신 동의 <br /><br />
             <br />
         </div>
         <br />
@@ -52,7 +51,6 @@
             <button class ="bt">
                 동의하고 가입하기
             </button>
-
        </div> 
     </div>
 </body>
