--- a/html/login/marketing.html
+++ b/html/login/marketing.html
@@ -11,7 +11,7 @@
     <div class="join">
     <div class = "agree">
     <div class="box"></div>
-    <div id = "Use"><b>마케팅목적의 개인정보 수집 동의서</b></div>
+    <div id = "use"><b>마케팅목적의 개인정보 수집 동의서</b></div>
     <hr>
     해당 사이트는 개인정보보호법 및 정보통신망이용촉진 및 정보보호 등에 관한 법률 등 관계법령에 따라 광고성 정보를 전송하기 위해 이용자의 사전 수신 동의를 받고 있습니다. 본 내용은 해당 사이트 회원 서비스가 적용되는 개별서비스의 마케팅 수신동의를 포함하고 있으며, 마케팅 정보 수신 동의 시개별서비스의 마케팅 수신에 일괄 동의한 것으로 처리됩니다. 
     <br /><br />
