--- a/html/login/passfind.html
+++ b/html/login/passfind.html
@@ -14,9 +14,8 @@
                 <br>받은 편지함을 확인하시고 제공된 지시에 따라주십시오. 
                 <br>이메일이 발송된 주소는 아래 칸에 입력해주세요.</p>
             <input type="email" id="email"/><br/>
-            
-            <button class="checkTime">이메일 전송</button><br/>
-            <button class="checkPoint">닫기</button><br/>
+            <button class="check-time">이메일 전송</button><br/>
+            <button class="check-point">닫기</button><br/>
         </div>
     </div>
     <script src="../../js/login/passfind.js"></script>
