--- a/html/login/privacy.html
+++ b/html/login/privacy.html
@@ -11,7 +11,7 @@
     
     <div class = "agree">
       <div class ="box"></div>
-    <div id = "Use"><b>개인정보 수집/이용 동의</b></div>
+    <div id = "use"><b>개인정보 수집/이용 동의</b></div>
     <hr>
     1. 개인정보의 수집항목 및 수집방법 <br />
 통계청 나라통계사이트에서는 기본적인 회원 서비스 제공을 위한 필수정보로 실명인증정보와 가입정보로 구분하여 다음의 정보를 수집하고 있습니다. 필수정보를 입력해주셔야 회원 서비스 이용이 가능합니다.
