feat : [FE] 예약리스트 생성

--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -62,12 +62,6 @@
         <main>
           <!-- 2.프로필 정보 -->
           <section class="profile" id="Mypage-section2">
-            <div class="sub-title-header">
-              <div class="sub-title">나의 프로필 정보</div>
-              <div class="out">
-                <a href="#">회원 탈퇴</a>
-              </div>
-            </div>
             <div class="profile-main">
               <div class="profile-main-image">
                 <img
@@ -164,8 +158,8 @@
           <section class="recent-reservation" id="Mypage-section4">
             <div class="sub-title-header">
               <div class="sub-title">현재 예약 현황</div>
-              <div class="ReservationMange-go">
-                <a href="#">상세 예약 현황 바로가기>>></a>
+              <div class="Reservation-mange-go">
+                <a href="reservationDetail.html">상세 예약 현황 바로가기>>></a>
               </div>
             </div>
             <div class="category">웨딩 홀</div>
