--- a/html/mypage/wishList.html
+++ b/html/mypage/wishList.html
@@ -26,12 +26,15 @@
       <h1>너와 나의 Like List</h1>
       <img src="" alt="" />
     </section>
-    <div class="hd__inner1400">
+    <div class="hd__inner1100">
       <!-- 0. 마이페이지 사이드 바 -->
-      <aside class="myPage-sidebar">
-        <div id="myPage-sidebar-placeholder"></div>
-      </aside>
-      <div class="hd__inner1100">
+      <div>
+        <aside class="myPage-sidebar">
+          <div id="myPage-sidebar-placeholder"></div>
+        </aside>
+      </div>
+
+      <div class="hd__inner960">
         <!-- 2.  팔로우 리스트  -->
         <section class="Wish_List-followList" id="Wish_List-section2">
           <div class="recent">
